--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,34 @@
-- name: Deploy
-  uses: peaceiris/actions-gh-pages@v4
-  with:
-    github_token: ${{ secrets.GITHUB_TOKEN }}
-    publish_dir: ./public
-
+name: Publish presentation 
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+permissions:
+  id-token: write
+  actions: write
+  pages: write
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses:  actions/checkout@v4
+        with:
+          persist-credentials: false
+      - name: Package and upload artifact 📦
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'build_output'
+          name: gh-pages
+      - name: Deploy to Github Pages 🚀
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: gh-pages
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Delete artifact 🗑️
+        uses: geekyeggo/delete-artifact@v4
+        with:
+          name: gh-pages
